# word-gen-card

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  src.py
