[project]
name = "word-gen-card"
description = "a dict export word list generate anki card tool"
authors = [
    {name = "jay lau", email = "cappyclear@gmail.com"},
]
dependencies = [
    "genanki==0.13.1",
    "edge-tts==6.1.11",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
version = "0.1.0"

[project.scripts]
card_cli = "src:main"

[tool.pdm]
plugins = ["pdm-autoexport"]

[tool.pdm.build]
includes = ["src.py"]
locked = true


[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = true

[tool.pdm.scripts]
lint = "pre-commit run --all-files"


[tool.pdm.dev-dependencies]
commit = [
    "pre-commit>=3.7.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
